--- a/api/nginx/default.conf
+++ b/api/nginx/default.conf
@@ -10,6 +10,9 @@ http {
     default upgrade;
     ''      close;
   }
+  proxy_buffer_size   128k;
+  proxy_buffers   4 256k;
+  proxy_busy_buffers_size   256k;
 
   server {
     listen 80;
