--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -5,6 +5,9 @@ http {
   upstream react {
     server qiita_react:8000;
   }
+  proxy_buffer_size   128k;
+  proxy_buffers   4 256k;
+  proxy_busy_buffers_size   256k;
 
   server {
     listen 80;
